--- a/.github/workflows/github_page.yml
+++ b/.github/workflows/github_page.yml
@@ -16,7 +16,7 @@ jobs:
       - run: npm install
 
       - name: Build
-        run: npm run docs:build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2
