--- a/.github/workflows/github_page.yml
+++ b/.github/workflows/github_page.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions: 
+      pages: write
+      id-token: write
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
